# Tl

./: .gitignore  Cargo.toml  Makefile  Program.cs  README.md  Tl.cbp  Tl.csproj  Tl.layout  build.gradle.kts  build.zig  eyr.c  eyr.internal.h  main.zig  settings.gradle.kts
.cargo/: config.toml
compiler/: CMakeLists.txt  main.zig
compiler/lexer/: ASCII.zig  Lexer.h  Lexer.zig  Types.zig
compiler/utils/: ASCII.h  Implem.txt
docs/: CHANGELOG.md  Examples.txt  LuaBytecode.txt  LuaOpCodes.txt  README.md  Syntax.txt  architecture.svgz  architecture.tar.xz  bytecodeInspiration.txt  compiler.txt  docs.db  parser.txt  specification.html  strtod.c  typeLayout.txt  types.txt
examples/: fizzbuzz.tl  simpleLoop.tl
include/: eyr.h
interpreter/: CMakeLists.txt  Makefile  main.c
interpreter/docs/: Syntax.txt
interpreter/ports/: FileReader.c  FileReader.h
interpreter/runtime/: Runtime.c  (+1 more)
scripts/: Build.java  Test.java  build.txt  codegenTest.txt  lexerTest.txt  parserTest.txt  test.txt  typerTest.txt  utilsTest.txt
source/: Main.c  Main.kt  Tlc.kt  lib.rs  main.rs  tl.c  tl.h  tl.internal.h
src/: billt.c  billt.internal.h  eyr.c  eyr.h  eyr.internal.h  ors.c  ors.h  ors.internal.h  prok.c  prok.h  prok.internal.h  tl.c  tl.internal.h
test/: CodegenTest.cs  CodegenTest.kt  Compiler.cs  CompilerTest.cs  LexerTest.c  LexerTest.kt  ParserTest.kt  Test.cs  billtTest.h  codegenTest.c  eyrTest.h  lexerTest.c  parserTest.c  runtimeTest.c  tlTest.h  typerTest.c  utilsTest.c
tests/: CompilerTest.rs
utils/: Arena.c  Arena.h  Arena.zig  EitherHeader.h  StackHeader.h
(+157 files in other folders)
